--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,4 @@
-# include external sources
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/ext)
-
-add_subdirectory(interpolation)
+##add_subdirectory(interpolation)
 add_subdirectory(preprocess)
-add_subdirectory(process)
+##add_subdirectory(process)
+##add_subdirectory(validation)
