--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -40,6 +40,7 @@ jobs:
           
       - name: pip-packages
         run: |
+          pip install --upgrade pip
           pip install numpy scikit-build cmake ninja imageio pytest
           
       - name: scikit-build
