Modified to pass macOS build test

--- a/src/validation/CMakeLists.txt
+++ b/src/validation/CMakeLists.txt
@@ -1,12 +1,13 @@
 # include wrapper sources
-include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src")
+file (GLOB SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 
-# create library
-##add_library(spatFiltPack STATIC ${SOURCE_FILES})
+# include wrapper sources
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")
 
 # add wrapper module
 pybind11_add_module(_validation 
     wrapper.cpp
+    ${SOURCE_FILES}
 )
 
 install(TARGETS _validation DESTINATION openpiv_cxx/validation)
