--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -16,7 +16,7 @@ jobs:
   test_linux:
     name: Linux Build tests
     if: "github.repository == 'ErichZimmer/OpenPIV-Python-cxx' || github.repository == ''"
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - name: Set up Python
         uses: actions/setup-python@v3
@@ -32,7 +32,7 @@ jobs:
           sudo apt-get update
           sudo apt install build-essential pkg-config curl zip unzip tar
           
-      - name: update submodules
+      - name: Update Submodules
         run: |
           git submodule update --init --recursive
           
