--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,7 +12,7 @@ jobs:
           python-version: 3.8
       - run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r ${{github.workspace}}/requirements.txt
           pip install black
           
       - run: |
