--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -52,6 +52,6 @@ jobs:
           
       - name: test
         run: |
-          pytest --cov .
+          pytest --cov tests
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
