--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -2,7 +2,7 @@
 version: 2
 
 conda:
-    environment: doc/readthedocs-env.yml
+    environment: docs/readthedocs-env.yml
 python:
     install:
         - method: setuptools
