--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -52,6 +52,7 @@ jobs:
           
       - name: test
         run: |
-          pytest --cov tests
+          pytest --cov=${{github.workspace}}/tests
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
