--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ requires = [
     "wheel",
     "scikit-build",
     "cmake",
-    "ninja; platform_system!=Windows"
+    "ninja"
 ]
 build-backed = "setuptools.build_meta"
 
