Fixed missing header

--- a/docs/readthedocs-env.yml
+++ b/docs/readthedocs-env.yml
@@ -5,8 +5,9 @@ channels:
 dependencies:
   - python
   - pip
-  - scikit-build
+  - ninja
   - cmake
+  - scikit-build
   - numpy
   - scipy
   - sphinx
