--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ test = [
     "pytest-timeout",
     "pytest-xdist",
 ]
-doc = [
+docs = [
     "sphinx!=4.1.0",
     "pydata-sphinx-theme==0.9.0",
     "sphinx-design>=0.2.0",
