--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,22 +11,6 @@ _defaults: &defaults
   working_directory: ~/repo
 
 commands:
-  check-skip:
-    steps:
-      - run:
-          name: Check-skip
-          command: |
-            if [ ! -d "openpiv_cxx" ]; then
-              echo "Build was not run due to skip, exiting job ${CIRCLE_JOB} for PR ${CIRCLE_PULL_REQUEST}."
-              circleci-agent step halt;
-            fi
-            export git_log=$(git log --max-count=1 --pretty=format:"%B" | tr "\n" " ")
-            echo "Got commit message:"
-            echo "${git_log}"
-            if [[ -v CIRCLE_PULL_REQUEST ]] && ([[ "$git_log" == *"[skip circle]"* ]] || [[ "$git_log" == *"[circle skip]"* ]]); then
-              echo "Skip detected, exiting job ${CIRCLE_JOB} for PR ${CIRCLE_PULL_REQUEST}."
-              circleci-agent step halt;
-            fi
   apt-install:
     steps:
       - run:
@@ -48,7 +32,7 @@ commands:
               git fetch upstream main;
             fi     
 jobs:
-# Build OpenPIV-Python-cxx from source
+  # Build OpenPIV-Python-cxx from source
   build_openpiv_cxx:
     <<: *defaults
     steps:
@@ -71,10 +55,10 @@ jobs:
           name: setup Python venv
           command: |
             pip install --upgrade pip
-            pip install numpy==1.21.5
-            pip install ninja
-            pip install scikit-build
             pip install cmake
+            pip install ninja
+            pip install scikit-build  
+            pip install numpy
             pip install imageio
             pip install scipy
             pip install matplotlib    
@@ -96,9 +80,26 @@ jobs:
           root: ~/
           paths:
             - .
+            
+  # build documentation
+  docs-build:
+    <<: *defaults
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: pip install --upgrade --no-cache-dir pillow mock==1.0.1 alabaster>=0.7,<0.8,!=0.7.5 commonmark==0.9.1 recommonmark==0.5.0 sphinx sphinx-rtd-theme readthedocs-sphinx-ext<2.2
+      - run:
+          name: Build docs
+          command: cd docs/ && make html
+      - persist_to_workspace:
+          root: docs/_build
+          paths: html
+
 workflows:
   version: 2
   default:
     jobs:
       - build_openpiv_cxx
+      - docs-build
 
