--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,31 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+# Aliases to reuse
+_defaults: &defaults
+  docker:
+    # CircleCI maintains a library of pre-built images
+    # documented at https://circleci.com/docs/2.0/circleci-images/
+    - image: cimg/python:3.8
+  working_directory: ~/repo
+
 commands:
+  check-skip:
+    steps:
+      - run:
+          name: Check-skip
+          command: |
+            if [ ! -d "openpiv_cxx" ]; then
+              echo "Build was not run due to skip, exiting job ${CIRCLE_JOB} for PR ${CIRCLE_PULL_REQUEST}."
+              circleci-agent step halt;
+            fi
+            export git_log=$(git log --max-count=1 --pretty=format:"%B" | tr "\n" " ")
+            echo "Got commit message:"
+            echo "${git_log}"
+            if [[ -v CIRCLE_PULL_REQUEST ]] && ([[ "$git_log" == *"[skip circle]"* ]] || [[ "$git_log" == *"[circle skip]"* ]]); then
+              echo "Skip detected, exiting job ${CIRCLE_JOB} for PR ${CIRCLE_PULL_REQUEST}."
+              circleci-agent step halt;
+            fi
   apt-install:
     steps:
       - run:
@@ -24,12 +48,12 @@ commands:
               git fetch upstream main;
             fi     
 jobs:
-  # Build OpenPIV-Python-cxx from source
+# Build OpenPIV-Python-cxx from source
   build_openpiv_cxx:
-    docker:
-      - image: cimg/python:3.8
+    <<: *defaults
     steps:
       - checkout
+      - check-skip
       - merge
       - apt-install
 
@@ -38,7 +62,6 @@ jobs:
           command: |
             git submodule init
             git submodule update --recursive
-      
       - restore_cache:
           keys:
               - deps_ccache-{{ .Branch }}
@@ -48,20 +71,18 @@ jobs:
           name: setup Python venv
           command: |
             pip install --upgrade pip
-            pip install cmake
+            pip install numpy==1.21.5
             pip install ninja
-            pip install scikit-build  
-            pip install numpy
+            pip install scikit-build
+            pip install cmake
             pip install imageio
             pip install scipy
             pip install matplotlib    
-     
-     - run:
+      - run:
           name: build OpenPIV-cxx
           command: |
-            python setup.py build --inplace
-    
-    - save_cache:
+            python setup.py build
+      - save_cache:
           key: deps_ccache-{{ .Branch }}
           paths:
             - ~/.ccache
@@ -71,36 +92,12 @@ jobs:
           name: ccache performance
           command: |
             ccache -s
-      
       - persist_to_workspace:
           root: ~/
           paths:
             - .
-            
-  # build documentation
-  docs-build:
-    docker:
-      - image: cimg/python:3.8
-    steps:
-      - checkout
-      - apt-install
-      
-      - run:
-          name: Install dependencies
-          command: pip install --upgrade --no-cache-dir pillow mock==1.0.1 alabaster>=0.7,<0.8,!=0.7.5 commonmark==0.9.1 recommonmark==0.5.0 sphinx sphinx-rtd-theme readthedocs-sphinx-ext<2.2
-      
-      - run:
-          name: Build docs
-          command: cd docs/ && make html
-      
-      - persist_to_workspace:
-          root: docs/_build
-          paths: html
-
 workflows:
   version: 2
   default:
     jobs:
       - build_openpiv_cxx
-      - docs-build
-
