--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,7 @@ jobs:
       - run:
           name: setup Python venv
           command: |
-            pip install --upgrade -r "requirements/build"  
+            pip install --upgrade -r "requirements/build.txt"  
       - run:
           name: build OpenPIV-cxx
           command: |
