--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,13 +7,7 @@ version: 2
 jobs:
   build:
     docker:
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # circleci/python3.8 images come with old versions of Doxygen(1.6.x),
-      # therefore a new base image chose instead to guarantee to
-      # have a newer version >= 1.8.10 to avoid warnings
-      # that related to the default behaviors or non-exist config options
-      - image: cimg/base:2021.05
+      - image: cimg/python:3.8
 
     working_directory: ~/repo
 
@@ -50,7 +44,6 @@ jobs:
           command: |
             sudo apt-get update
             sudo apt-get install build-essential curl zip unzip tar ninja-build
-            sudo apt-get install -y python3.8 python3.8-dev python3-venv doxygen
       
       - run:
           name: build openpiv-cxx
@@ -70,6 +63,6 @@ jobs:
             SPHINXOPTS="-j4 -q" make -e html
 
       - store_artifacts:
-          path: doc/build/html/
+          path: docs/build/html/
 
 
