--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
       - run:
           name: build project
           command: |
-            python setup.py install .
+            python setup.py build_ext --inplace
       
       - run:
           name: build docs
