--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04, macos-12, windows-2019]
-        pyver: ["3.7"]
+        pyver: ["3.7", "3.8"]
 
     steps:
       - uses: actions/checkout@v3.0.2
