--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -14,13 +14,16 @@ on:
 
 jobs:
   build_wheels:
-    name: Build wheel for ${{ matrix.os }}, Python ${{ matrix.pyver }}
-    runs-on: ${{ matrix.os }}
+    name: Build wheel for ${{ matrix.buildplat[1] }}, Python ${{ matrix.pyver }}
     if: ${{ contains(github.event.pull_request.labels.*.name, 'build_wheels') }} #|| github.event_name != 'pull_request' }}
+    runs-on: ${{ matrix.buildplat[0] }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, macos-12, windows-2019]
-        pyver: ["3.7", "3.8"]
+        buildplat:
+        - [ubuntu-20.04, manylinux_x86_64]
+        - [macos-10.15, macosx_*]
+        - [windows-2019, win_amd64]
+        pyver: ["3.7"]
 
     steps:
       - uses: actions/checkout@v3.0.2
@@ -30,19 +33,17 @@ jobs:
       - name: Set up Python ${{ matrix.pyver }}
         uses: actions/setup-python@v3
         with:
-          python-version: ${{ matrix.pyver }}
-          
-      - name: Install requirements
-        run: |
-          pip install numpy scikit-build cmake ninja imageio pytest wheel
-
-      - name: Build wheel
-        run: python setup.py bdist_wheel
+          python-version: "3.x"
+      
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.9.0
+        env:
+          CIBW_BUILD: ${{ matrix.pyver }}-${{ matrix.buildplat[1] }}
 
       - uses: actions/upload-artifact@v3
         with:
-          name: dist
-          path: dist/*.whl
+          name: ${{ matrix.python }}-${{ startsWith(matrix.buildplat[1], 'macosx') && 'macosx' || matrix.buildplat[1] }}
+          path: ./wheelhouse/*.whl
 
   build_sdist:
     name: Build source distribution
