--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ requires = [
 ]
 
 [project]
-name = "openpiv_cxx"
+name = "OpenPIV_cxx"
 license = {file = "LICENSE.txt"}
 description = "DPIV software for pre/post processing and analysis of image pairs."
 maintainers = [
