--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -6,39 +6,39 @@ on:
   push:
     branches:
       - "master"
-    #tags:
-    #  - "v*"
+    tags:
+      - "v*"
 
   pull_request:
       types: [opened, labeled, reopened, synchronize]
 
 jobs:
   build_wheels:
-    name: Build wheel for ${{ matrix.buildplat[1] }}, Python ${{ matrix.pyver }}
-    #if: ${{ contains(github.event.pull_request.labels.*.name, 'build_wheels') }} || github.event_name != 'pull_request' }}
-    runs-on: ${{ matrix.buildplat[0] }}
+    name: Build wheel for ${{ matrix.os }}, Python ${{ matrix.pyver }}
+    runs-on: ${{ matrix.os }}
+    if: ${{ contains(github.event.pull_request.labels.*.name, 'build_wheels') || github.event_name != 'pull_request' }}
     strategy:
       matrix:
-        buildplat:
-        - [ubuntu-20.04, manylinux_x86_64]
-        - [macos-10.15, macosx_*]
-        - [windows-2019, win_amd64]
-        pyver: ["3.7"]
+        os: [ubuntu-20.04, macos-12, windows-2019]
+        pyver: ["3.6", "3.7", "3.8", "3.9", "3.10"]
 
     steps:
       - uses: actions/checkout@v3.0.2
         with:
           submodules: "recursive"
-        
-      - name: Set up Python ${{ matrix.pyver }}
-        uses: actions/setup-python@v3
-        with:
-          python-version: "3.x"
-      
+
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.9.0
+        uses: pypa/cibuildwheel@v2.10.2
         env:
-          CIBW_BUILD: ${{ matrix.pyver }}-${{ matrix.buildplat[1] }}
+          # Build for cpython >= 3.6.
+          CIBW_PROJECT_REQUIRES_PYTHON: "==${{ matrix.pyver }}.*"
+          CIBW_SKIP: "{pp*,*-musllinux_*}"
+
+          # Build only on 64-bit architectures.
+          CIBW_ARCHS_MACOS: "x86_64 arm64"
+          CIBW_ARCHS_LINUX: auto64
+          CIBW_ARCHS_WINDOWS: auto64
+          CIBW_TEST_COMMAND: "cd {package}/tests && pytest . -v --log-level=DEBUG -n auto"
 
       - uses: actions/upload-artifact@v3
         with:
@@ -48,7 +48,7 @@ jobs:
   build_sdist:
     name: Build source distribution
     runs-on: ubuntu-latest
-    #if: ${{ contains(github.event.pull_request.labels.*.name, 'build_wheels') }} || github.event_name != 'pull_request' }}
+    if: ${{ contains(github.event.pull_request.labels.*.name, 'build_wheels') }} || github.event_name != 'pull_request' }}
     steps:
       - uses: actions/checkout@v3.0.2
         with:
