--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -16,7 +16,7 @@ jobs:
   build_wheels:
     name: Build wheel for ${{ matrix.os }}, Python ${{ matrix.pyver }}
     runs-on: ${{ matrix.os }}
-    if: ${{ contains(github.event.pull_request.labels.*.name, "build_wheels") || github.event_name != "pull_request" }}
+    if: ${{ contains(github.event.pull_request.labels.*.name, 'build_wheels') || github.event_name != 'pull_request' }}
     strategy:
       matrix:
         os: [ubuntu-20.04, macos-12, windows-2019]
@@ -48,7 +48,7 @@ jobs:
   build_sdist:
     name: Build source distribution
     runs-on: ubuntu-latest
-    if: ${{ contains(github.event.pull_request.labels.*.name, "build_wheels") }} || github.event_name != "pull_request" }}
+    if: ${{ contains(github.event.pull_request.labels.*.name, 'build_wheels') }} || github.event_name != 'pull_request' }}
     steps:
       - uses: actions/checkout@v3.0.2
         with:
@@ -86,7 +86,7 @@ jobs:
         run: ls -lR dist
 
       - name: Upload to TestPyPI
-        if: ${{ !startsWith(github.ref, "refs/tags/v") && (github.event_name != "pull_request" }}
+        if: ${{ !startsWith(github.ref, 'refs/tags/v') && (github.event_name != 'pull_request' }}
         uses: pypa/gh-action-pypi-publish@v1.5.1
         with:
           user: __token__
