--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -8,9 +8,10 @@ on:
   # twice when the pull request source branch is in the same repository.
   push:
     branches:
-      - "master"
+      - main
     tags:
       - "v*"
+
 
   pull_request:
       types: [opened, labeled, reopened, synchronize]
@@ -19,7 +20,7 @@ jobs:
   build_wheels:
     name: Build wheel for ${{ matrix.os }}, Python ${{ matrix.pyver }}
     runs-on: ${{ matrix.os }}
-    if: ${{ contains(github.event.pull_request.labels.*.name, 'build_wheels') || github.event_name != 'pull_request' }}
+    #if: ${{ contains(github.event.pull_request.labels.*.name, 'build_wheels') }} || github.event_name != 'pull_request' }}
     strategy:
       matrix:
         os: [ubuntu-20.04, macos-12, windows-2019]
@@ -51,7 +52,7 @@ jobs:
   build_sdist:
     name: Build source distribution
     runs-on: ubuntu-latest
-    if: ${{ contains(github.event.pull_request.labels.*.name, 'build_wheels') }} || github.event_name != 'pull_request' }}
+    #if: ${{ contains(github.event.pull_request.labels.*.name, 'build_wheels') || github.event_name != 'pull_request' }}
     steps:
       - uses: actions/checkout@v3.0.2
         with:
@@ -89,7 +90,7 @@ jobs:
         run: ls -lR dist
 
       - name: Upload to TestPyPI
-        if: ${{ !startsWith(github.ref, 'refs/tags/v') && (github.event_name != 'pull_request' }}
+        if: ${{ !startsWith(github.ref, 'refs/tags/v') && (github.event_name != 'pull_request' || (github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]')) }}
         uses: pypa/gh-action-pypi-publish@v1.5.1
         with:
           user: __token__
