--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -47,7 +47,7 @@ jobs:
           CIBW_BUILD: ${{ matrix.pyver }}-${{ matrix.buildplat[1] }}
           
           # setup environment
-          CIBW_BEFORE_BUILD_LINUX: "yum install pkgconfig"
+          CIBW_BEFORE_BUILD_LINUX: "yum install -y curl unzip zip tar"
           MACOSX_DEPLOYMENT_TARGET: "10.14"
           CIBW_BUILD_FRONTEND: "build"
 
