--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ tracker = "https://github.com/ErichZimmer/OpenPIV-Python-cxx/issues"
 skip = "pp* *_ppc64le *_i686 *_s390x *-musllinux*"
 build-verbosity = "3"
 test-requires = ["pytest", "pytest-cov", "pytest-xdist", "scipy", "matplotlib"]
-test-command = "pytest {project}/tests"
+test-command = "cd {package}/tests && pytest ."
 
 [tool.cibuildwheel.linux]
 manylinux-x86_64-image = "manylinux2014"
@@ -62,3 +62,6 @@ manylinux-aarch64-image = "manylinux2014"
 [tool.cibuildwheel.macos]
 archs = "x86_64 arm64"
 test-skip = "*_arm64 *_universal2:arm64"
+
+[tool.cibuildwheel.windows]
+test-skip = "*win32"
