--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -30,6 +30,7 @@ jobs:
         - [ubuntu-20.04, manylinux_x86_64]
         - [macos-10.14, macosx_*]
         - [windows-2019, win_amd64]
+        - [windows-2019, win32]
         pyver: ["cp38"]
 
     steps:
