--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -30,13 +30,19 @@ jobs:
         - [ubuntu-20.04, manylinux_x86_64]
         - [macos-10.14, macosx_*]
         - [windows-2019, win_amd64]
-        - [windows-2019, win32]
         pyver: ["cp37", "cp38", "cp39", "cp310", "cp311"]
 
     steps:
       - uses: actions/checkout@v3.0.2
         with:
           submodules: "recursive"
+          
+      - name: win_amd64 - install rtools
+        run: |
+          # mingw-w64
+          choco install rtools --no-progress
+          echo "c:\rtools40\ucrt64\bin;" >> $env:GITHUB_PATH
+        if: ${{ runner.os == 'Windows' }}
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.9.0
