--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,11 +16,7 @@ set(openpiv_cxx_VERSION_MAJOR 0)
 set(openpiv_cxx_VERSION_MINOR 1)
 set(openpiv_cxx_VERSION_PATCH 0)
 
-# include external sources
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/extern/extras)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/pybind11)
-
-# setup for building libopenpivcore0
+# setup for building libopenpivcore
 if(WIN32)
   set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 endif(WIN32)
@@ -34,7 +30,7 @@ else()
   set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
   set(CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unknown-pragmas")
-  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DNDEBUG -g -O3 -ffast-math")
+  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DNDEBUG -g -O3 -ffast-math -march=native")
 endif()
 
 # Set the _using_conda variable when building against a conda environment
@@ -45,6 +41,9 @@ if(EXISTS "${_python_bin_dir}/../conda-meta")
 else()
   set(_using_conda Off)
 endif()
+
+# include pybind11
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/pybind11)
 
 # build openpivcore
 add_subdirectory(${OPENPIV_CXX_DIR}/openpiv)
